# AICivilization

./: .gitignore  CMakeLists.txt  PROMOTION.md  PROMOTION_JA.md  README.md  build.bat  run.bat
assets/fonts/: placeholder.txt
config/: anomaly_rules.json  app_settings.json  simulation_defaults.json
config/scenarios/: bh_gv_hh_experiment.json  closed_box.json  memory_collapse.json  primitive_seed.json  religion_bloom.json  total_random.json  unknown_stress.json
src/: main.cpp
src/analysis/: CivilizationAnalyzer.cpp  CivilizationAnalyzer.hpp  SurvivalReasoner.cpp  SurvivalReasoner.hpp
src/anomaly/: Anomaly.hpp  AnomalySystem.cpp  AnomalySystem.hpp  BlackHole.hpp  Gravity.hpp  UnknownStress.hpp  WhiteHole.hpp
src/app/: App.cpp  App.hpp  AppState.cpp  AppState.hpp
src/audio/: AudioManager.cpp  AudioManager.hpp
src/gui/: AnomalyPanel.cpp  AnomalyPanel.hpp  GuiManager.cpp  GuiManager.hpp  GuiText.cpp  GuiText.hpp  MainPanel.cpp  MainPanel.hpp  TimelinePanel.cpp  TimelinePanel.hpp
src/notify/: AlertRouter.cpp  AlertRouter.hpp  AlertTemplate.cpp  AlertTemplate.hpp  NotificationManager.cpp  NotificationManager.hpp  VoicevoxClient.cpp  VoicevoxClient.hpp  WindowsNotifier.cpp  WindowsNotifier.hpp
src/render/: ParticleRenderer.cpp  ParticleRenderer.hpp  Renderer.cpp  Renderer.hpp
src/simulation/: Agent.cpp  Agent.hpp  Civilization.cpp  Civilization.hpp  Concept.cpp  Concept.hpp  Simulation.cpp  Simulation.hpp  World.cpp  World.hpp
src/systems/: AgentSystem.cpp  AgentSystem.hpp  ConceptSystem.cpp  ConceptSystem.hpp  LawSystem.cpp  LawSystem.hpp  ReligionSystem.cpp  ReligionSystem.hpp  StructureSystem.cpp  StructureSystem.hpp
src/util/: CsvWriter.cpp  CsvWriter.hpp  JsonUtil.cpp  JsonUtil.hpp  Localization.cpp  Localization.hpp  Logger.cpp  Logger.hpp  Random.cpp  Random.hpp
tests/: test_agent.cpp  test_anomaly.cpp  test_concept.cpp  test_save_load.cpp  test_simulation.cpp
